<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 第一层容器，水平放置两个textview -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="59dp"
        android:background="#4DFFFF"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="始发地   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="33sp" />

        <TextView
            android:id="@+id/textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="   目的地   "
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="33sp" />
    </LinearLayout>
    <!-- 第二层容器，水平放置一个textview，一个下拉列表框 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4DFFFF"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.38"
            android:gravity="center_vertical|center_horizontal"
            android:text="河南"
            android:textAlignment="center"
            android:textSize="35sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="173dp"
            android:layout_height="66dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- 第三层容器，垂直放置两个textview， -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/weight"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:gravity="right"
            android:hint="@string/please"
            android:maxLength="6"
            
            android:textIsSelectable="true"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="fill_parent"
            android:layout_height="66dp"
            android:background="#FFE66F"
            android:gravity="center"
            android:hint="@string/price"
            android:textIsSelectable="true"
            android:textSize="25sp" />
    </LinearLayout>
    <!-- 第四层   大   容器，水平放置两个垂直  容器 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="3"
        android:background="#4DFFFF"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="3"
            android:background="#4DFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- 1      2  	   3 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="3"
                android:background="#4DFFFF"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/one_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/two_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/three_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textSize="35sp" />
            </LinearLayout>

            <!-- 4      5  	   6 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="#4DFFFF"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/four_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/five_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/six_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textSize="35sp" />
            </LinearLayout>

            <!-- 7       8  	   9 		C -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="#4DFFFF"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/seven_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/eight_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/nine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="92dp"
            android:layout_height="fill_parent"
            android:background="#4DFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/clear_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5.44"
                android:gravity="center"
                android:text="@string/clear"
                android:textSize="35sp" />

            <Button
                android:id="@+id/point_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5.44"
                android:gravity="center"
                android:text="@string/point"
                android:textSize="35sp" />

            <Button
                android:id="@+id/zero_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5.44"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 单清      0  确认 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4DFFFF"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/calc"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>